fix(docs-infra): default type attribute of input element to 'text' instead of '' and overshadow global CSS rule for input[type='text']
missing value for type attribute seems unintended but only defaulting it to 'text' without changing the CSS would have messed up the style for this example

Fixes #48895

--- a/aio/content/examples/dynamic-form/src/assets/sample.css
+++ b/aio/content/examples/dynamic-form/src/assets/sample.css
@@ -1,7 +1,13 @@
-.errorMessage{
-  color:red;
+.errorMessage {
+  color: red;
 }
 
-.form-row{
+.form-row {
   margin-top: 10px;
+}
+
+input[type='text'].dynamicInput {
+  box-sizing: revert;
+  width: revert;
+  padding: revert;
 }
